syntax="proto2";
//import "PlayerInfo.proto";
package msg;

message Rqst_CreateSelf {
	required string Account = 1;
	required string Password = 2;
	//required PlayerInfo playerinfo = 3;
}


