syntax="proto2";
//import "PlayerInfo.proto";
package msg;
message Rspn_HeartBeating {
	required int32 Status = 1[default=1];
	//repeated PlayerInfo PlayerList  = 2;

}
 

