syntax="proto2";
import "PlayerInfo.proto";
package msg;


message Rspn_LeaveOffOthers {
	repeated PlayerInfo Player = 1;
}
 

 